tests/baselines/reference/minimal_nodeModules_declarationEmit.errors.txt
/main.ts(1,14): error TS2742: The inferred type of 'boom' cannot be named without a reference to './node_modules/foo/module.js'. This is likely not portable. A type annotation is necessary.


==== /node_modules/foo/module.d.ts (0 errors) ====
    export declare class SomeExportedClass {
      private foo: any;
    }
    
    declare global {
      function returnsPrivateClassOhNo(): SomeExportedClass;
    }
    
==== /main.ts (1 errors) ====
    export const boom = returnsPrivateClassOhNo();
                 ~~~~
!!! error TS2742: The inferred type of 'boom' cannot be named without a reference to './node_modules/foo/module.js'. This is likely not portable. A type annotation is necessary.
    